--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -9,7 +9,7 @@ published: true
 
 ---
 
-## What this actually is (plain language)
+## What this actually is 
 
 This is my “long game” project.
 
@@ -74,7 +74,7 @@ Right now I’m in the **“turn all this into a clean model”** phase: formali
 
 ---
 
-## How I’m planning to attack it (explainer version)
+## How I’m planning to attack it 
 
 ### 1. Model the network around the chokepoint
 
@@ -148,7 +148,7 @@ If the model ends up saying something completely different, that’s even more i
 
 ---
 
-## Technical appendix (for the nerds)
+## Technical appendix 
 
 If you care about the guts, here’s the current direction in bullet form:
 
